[tool.poetry]
name = "mojo-credentials"
description = "Automation Mojo Credentials Package"
version = "1.3.16"
authors = []
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mojo-errors = "^1.3.8"

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
