[tool.poetry]
name = "mojo-credentials"
description = "Automation Mojo Credentials Package"
version = "2.0.0"
authors = []
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mojo-errors = ">=2.0.0 <2.1.0"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
